# sherwood

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  Sherwood.toml  sherwood.toml
.github/workflows/: ci.yml  docs.yml  pages.yml  release.yml
_templates/config/: sherwood.toml
_templates/templates/: [...slug].html.tera
_templates/templates/blog/: [slug].html.tera  index.html.tera
_templates/templates/docs/: [slug].html.tera
_templates/themes/default/: utilities.css
content/: about.md  default-theme.md  index.md
content/blog/: first-post.md  getting-started-with-rust.md  index.md
content/docs/: frontmatter.md
crates/sherwood/: Cargo.toml  README.md
crates/sherwood/content/: index.md
crates/sherwood/src/: cli.rs  content_generation.rs  generator.rs  html_renderer.rs  lib.rs  main.rs  page_generator.rs  server.rs  sherwood.rs  templates.rs  themes.rs  utils.rs
crates/sherwood/src/components/: html_renderer.rs  markdown_parser.rs  mod.rs  page_generator.rs  templates.rs  themes.rs
crates/sherwood/src/config/: mod.rs
crates/sherwood/src/content/: date_parsing.rs  list_generation.rs  markdown_util.rs  mod.rs  parser.rs  renderer.rs  sorting.rs  universal_parser.rs  validation.rs
crates/sherwood/src/content/parsing/: ast_utils.rs  excerpt_extraction.rs  frontmatter_parsing.rs  html_conversion.rs  markdown_parser.rs  mod.rs  title_extraction.rs
crates/sherwood/src/core/: content_generation.rs  markdown_config.rs  mod.rs  sherwood.rs
crates/sherwood/src/generator/: mod.rs
crates/sherwood/src/partials/: breadcrumb.rs  content_item.rs  mod.rs  next_prev_nav.rs  sidebar_nav.rs
crates/sherwood/src/plugins/: mod.rs
crates/sherwood/src/presentation/: css_processing.rs  mod.rs  page_builder.rs  pages.rs  partials.rs  styles.rs  template_processor.rs  templates.rs  themes.rs
crates/sherwood/src/presentation/styles/: browser_targets.rs  embedded_files.rs  manager.rs  mod.rs  processor.rs  validation.rs
crates/sherwood/src/server/: mod.rs  server_handlers.rs  server_setup.rs
crates/sherwood/src/templates/: common.rs  default.rs  docs.rs  mod.rs  registry.rs  renderer.rs  sherwood.rs
crates/sherwood/src/templates/partials/: breadcrumb.rs  content_item.rs  mod.rs  next_prev_nav.rs  sidebar_nav.rs
crates/sherwood/styles/: components.css  main.css  variables.css
crates/sherwood/templates/: 404.stpl  TEMPLATE_COMPOSITION_GUIDE.md  content_item.stpl  default.stpl  docs.stpl  sherwood.stpl  sidebar_nav.stpl
crates/sherwood/templates/partials/: breadcrumb.stpl  next_prev_nav.stpl
crates/sherwood/themes/default/: default.css
crates/sherwood/themes/kanagawa/: variables.css
docs/: .gitignore  Cargo.toml  README.md  Sherwood.toml  about.md  dark-demo.md  index.md
docs-old/docs/: deployment.md
docs/.sherwood/release/: dev  generate
docs/blog/: web-development-fundamentals.md
docs/content/: api-auth.txt  dark-demo.md  example.toml  index.md  json-example.json  sock.md  test-doc.md  toml-html-example.toml
docs/content/blog/: getting-started-with-rust.md  index.md  web-development-fundamentals.md
docs/content/docs/: cli-commands.md  deployment.md  frontmatter.md  getting-started.md  index.md  parsers.md
docs/content/examples/: excerpt-example.md  index.md  json-example.json  json-html-example.json
docs/docs/: getting-started.md
docs/src/: main.rs
docs/src/parsers/: json.rs  mod.rs  toml.rs  txt.rs
docs/src/templates/: doc.rs  docs.rs  mod.rs  sock.rs
docs/src/templates/partials/: footer.rs  header.rs  mod.rs
docs/templates/: doc.stpl  docs.stpl  sock.stpl
docs/templates/partials/: footer.stpl  header.stpl
site/: CNAME  Cargo.toml  README.md
site/assets/: style.css
site/content/: getting-started.md  index.md
site/content/guide/: custom-parsers.md  index.md  library-api.md
site/src/: main.rs
site/templates/: page.stpl
src/: build.rs  cli.rs  config.rs  default_template.rs  frontmatter.rs  generator.rs  lib.rs  main.rs  nav.rs  page.rs  project.rs  serve.rs  server.rs  template.rs  template_resolver.rs  templates.rs  themes.rs
src/cli/: mod.rs  serve.rs
src/core/: build.rs  config.rs  mod.rs
src/core/content/: frontmatter.rs  mod.rs  page.rs
src/core/content/parser/: markdown.rs  mod.rs  text.rs
src/core/nav/: breadcrumb.rs  mod.rs  test_support.rs  url.rs
src/nav/: breadcrumb.rs  mod.rs  test_support.rs  url.rs
src/parser/: markdown.rs  mod.rs
templates/: blog_post.stpl  page.stpl  style.css
templates/config/: sherwood.toml
templates/content/: index.md
templates/simple/: .gitignore  Cargo.toml  Cargo.toml.liquid  README.md.liquid  Sherwood.toml.liquid  cargo-generate.toml
templates/simple/.cargo/: config.toml
templates/simple/content/: index.md.liquid
templates/simple/src/: main.rs
templates/simple/themes/default/: components.css
templates/themes/default/: base.css
templates/themes/kanagawa/: components.css
tests/: e2e_build.rs  lib_render.rs
themes/default/: base.css  components.css  default.css
themes/kanagawa/: base.css  default.css  utilities.css
