[package]
name = "sherwood"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["tokio"] }
clap = { version = "4.6.1", features = ["derive"] }
gray_matter = { version = "0.3.2", features = ["toml"] }
pulldown-cmark = "0.13.4"
sailfish = "0.11.1"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.6.11", features = ["fs"] }
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
