[workspace]
members = [".", "site"]
resolver = "3"

[package]
name = "sherwood"
version = "0.9.0"
edition = "2024"
description = "A small, opinionated static site generator. Markdown content + Sailfish templates, with pretty URLs, file-watch live reload, and a high-level CLI helper for downstream binaries."
license = "MIT"
repository = "https://github.com/thombruce/sherwood"
homepage = "https://github.com/thombruce/sherwood"
readme = "README.md"
keywords = ["static-site-generator", "ssg", "markdown", "sailfish", "blog"]
categories = ["command-line-utilities", "web-programming"]
# The dogfooding site (site/) is a separate, unpublished workspace member.
# Keep it out of the published `sherwood` crate.
exclude = ["/site"]

[features]
default = ["cli", "default-template"]
cli = ["dep:axum", "dep:clap", "dep:tokio", "dep:tower-http", "dep:notify-debouncer-mini"]
default-template = ["dep:sailfish"]

[[bin]]
name = "sherwood"
required-features = ["cli", "default-template"]

[dependencies]
gray_matter = { version = "0.3.2", features = ["toml"] }
pulldown-cmark = "0.13.4"
thiserror = "2.0.18"
walkdir = "2.5.0"

axum = { version = "0.8.9", features = ["tokio", "ws"], optional = true }
clap = { version = "4.6.1", features = ["derive"], optional = true }
tokio = { version = "1.52.3", features = ["full"], optional = true }
tower-http = { version = "0.6.11", features = ["fs"], optional = true }
notify-debouncer-mini = { version = "0.7", optional = true }

sailfish = { version = "0.11.1", optional = true }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
