[package]
name = "docs"
version = "0.1.0"
edition = "2024"
description = "A simple static site powered by Sherwood"
authors = ["Thom Bruce <thom@thombruce.com>"]
license = "MIT"
keywords = ["ssg", "static", "blog", "markdown", "web"]
categories = ["web-programming", "development-tools"]

[workspace]

[dependencies]
sherwood = "0.1.0"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
