[package]
name = "docs"
version = "0.1.0"
edition = "2024"
description = "A simple static site powered by Sherwood"
authors = ["Thom Bruce <thom@thombruce.com>"]
license = "MIT"
keywords = ["ssg", "static", "blog", "markdown", "web"]
categories = ["web-programming", "development-tools"]

[workspace]

[[bin]]
name = "ssg"
path = "src/main.rs"

[dependencies]
sherwood = { path = "../crates/sherwood" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
sailfish = "0.8"
anyhow = "1.0"
toml = "0.8"
serde_json = "1.0"
