[package]
name = "sherwood"
version.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["ssg", "static", "blog", "markdown", "web"]
categories = ["web-programming", "development-tools"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
pulldown-cmark = "0.9"
tokio = { version = "1.0", features = ["full"] }
axum = "0.8"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
anyhow = "1.0"
serde_yaml = "0.9"
toml = "0.8"
include_dir = { version = "0.7", features = ["glob"] }
sailfish = "0.8"
thiserror = "1.0"
