[package]
name = "sherwood"
version.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["ssg", "static", "blog", "markdown", "web"]
categories = ["web-programming", "development-tools"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
pulldown-cmark = "0.13"
tokio = { version = "1.0", features = ["full"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }
anyhow = "1.0"
serde_yaml = "0.9"
toml = "0.9"
include_dir = { version = "0.7", features = ["glob"] }
sailfish = "0.8"
thiserror = "1.0"
tempfile = "3.8"
lightningcss = { version = "1.0.0-alpha.68", features = ["bundler"] }
chrono = { version = "0.4", features = ["serde"] }
gray_matter = { version = "0.3", features = ["yaml", "toml"] }
